# sales

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  FEATURES.md  LICENSE  PLAN.md  README.md  drizzle.config.ts  eslint.config.mjs  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx
app/actions/: bulk.ts  company-overview.ts  status.ts
app/lead/: actions.ts
app/people/: actions.ts
app/prompt/: loading.tsx  page.tsx  prompt-editor.tsx
app/scoring/: error.tsx  page.tsx
components/layout/: entity-detail-layout.tsx  model-selector.tsx  sidebar.tsx
components/lead/: lead-research-panel.tsx
components/leads/: add-lead-modal.tsx  lead-list-with-selection.tsx  rescore-button.tsx  research-button.tsx  score-bars.tsx  score-breakdown.tsx  score-leads-button.tsx
components/onboarding/: company-overview-dialog.tsx  onboarding-checklist.tsx  onboarding-step.tsx
components/people/: add-person-modal.tsx  enrich-email-button.tsx  people-list-with-selection.tsx  person-conversation-panel.tsx  person-profile-tabs.tsx  person-research-panel.tsx  research-button.tsx
components/preview/: lead-preview.tsx  markdown-preview.tsx
components/scoring/: config-editor.tsx
components/selection/: action-command-menu.tsx  floating-action-bar.tsx  selectable-entity-list.tsx  selectable-row.tsx  selection-provider.tsx
components/status/: research-status-badge.tsx  user-status-selector.tsx
components/stream-panel/: stream-panel-content.tsx  stream-panel-header.tsx  stream-panel-tabs.tsx  stream-panel-wrapper.tsx  stream-panel.tsx  use-stream-subscription.ts
components/ui/: alert-dialog.tsx  button.tsx  checkbox.tsx  collapsible-status-group.tsx  combobox.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  empty-state.tsx  input-group.tsx  markdown-renderer.tsx  resizable.tsx  select.tsx  sheet.tsx  skeletons.tsx  sonner.tsx
db/: index.ts  schema.ts  seed.ts
docs/: 04_RESEARCH_AND_AI_FEATURES.md  05_LEAD_SCORING_SYSTEM.md  08_PROMPT_MANAGEMENT.md  code-cleanup-backlog.md
drizzle/: 0000_absurd_ink.sql  0001_chemical_clint_barton.sql  0002_woozy_tempest.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
hooks/: use-agent-action.ts
lib/: env.ts
lib/api/: effect-error-handler.ts  responses.ts
lib/constants/: status-config.ts
lib/db/: queries.ts  status-utils.ts
lib/hunter/: client.ts
lib/prompts/: formatters.ts  index.ts
lib/research/: claude-effect.ts  (+5 more)
src/: App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/ici.icon/: icon.json
src-tauri/src/: events.rs  lib.rs  main.rs  model_config.rs  org_store.rs
src-tauri/src/commands/: database.rs  jobs.rs  mod.rs  org.rs  prompts.rs  recovery.rs  research.rs  settings.rs  storage.rs  subscription.rs
src-tauri/src/crypto/: device.rs  encryption.rs  mod.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs  seed.rs
src-tauri/src/jobs/: completion_handler.rs  enrichment.rs  mod.rs  queue.rs  recovery.rs  result_parser.rs  staging_worker.rs  stream_processor.rs
src-tauri/src/prompts/: mod.rs
src-tauri/src/prompts/defaults/: company.md  company_profile_research.md  conversation_topics.md  person.md
src-tauri/src/subscription/: mod.rs  renewal.rs  store.rs  validator.rs
(+171 files in other folders)
