[package]
name = "qualify"
version = "0.1.0"
edition = "2021"
description = "Lead Research and Qualification System"
authors = [""]
license = ""
repository = ""
default-run = "qualify"

[lib]
name = "qualify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "qualify"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "sync"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dirs = "5"
which = "7"

# Unix signal handling for graceful process shutdown
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"
