[package]
name = "qualify"
version = "0.2.1"
edition = "2021"
description = "Lead Research and Qualification System"
authors = [""]
license = ""
repository = ""
default-run = "qualify"

[lib]
name = "qualify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "qualify"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "sync"] }
rusqlite = { version = "0.40", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dirs = "6"
which = "8"

# Unix signal handling for graceful process shutdown
[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"
